--- a/CE-UI/src/app/patient-data-form/patient-data-form.component.html
+++ b/CE-UI/src/app/patient-data-form/patient-data-form.component.html
@@ -15,7 +15,7 @@
       type="text"
       id="patient-name"
       [(ngModel)]="patient.firstname"
-      class="block w-full rounded-md border-0 py-1.5 pl-2 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+      class="basis-1/2 rounded-md border-0 py-1.5 pl-2 focus:ring-2 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
     />
   </div>
   <div>
@@ -32,7 +32,7 @@
       type="text"
       id="patient-last-name"
       [(ngModel)]="patient.lastname"
-      class="block w-full rounded-md border-0 py-1.5 pl-2 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+      class="basis-1/2 rounded-md border-0 py-1.5 pl-2 focus:ring-2 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
     />
   </div>
   <div>
@@ -50,7 +50,7 @@
       id="patient-birthday"
       [ngModel]="patient.dateOfBirth | date : 'yyyy-MM-dd'"
       (ngModelChange)="setDateOfBirth($event)"
-      class="block w-full rounded-md border-0 py-1.5 pl-2 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+      class="basis-1/2 rounded-md border py-1.5 pl-2 focus:ring-2 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6 border-tone-2"
     />
   </div>
 </div>
