--- a/CE-UI/src/app/app.component.html
+++ b/CE-UI/src/app/app.component.html
@@ -1,19 +1,34 @@
 <mat-toolbar class="bg-background">
-  <img src="./assets/CardioLogo.png" class="h-11 px-10">
-  <a class="title" href="/">Show History</a>
-  <div class="toolbar-spacer"></div>
-  <a class="title" href="/patient/new">Create new Patient</a>
-
-  <div class="toolbar-spacer"></div>
-
-  <a *ngIf="loginDisplay" mat-button [routerLink]="['profile']">Profile</a>
-
-  <button mat-raised-button *ngIf="!loginDisplay" (click)="login()">
-    Login
-  </button>
-  <button mat-raised-button *ngIf="loginDisplay" (click)="logout()">
-    Logout
-  </button>
+  <div name="main-nav-bar" class="grid grid-cols-5 w-full place-content-center ">
+    <div routerLink="/" class="hover:cursor-pointer">
+      <img alt="logo" src="./assets/CardioLogo.png" class="h-11 px-10">
+    </div>
+    <div>
+      <a class="hover:text-secondary align-middle group  text-primary transition duration-300 inline-block" routerLink="/" routerLinkActive="text-secondary" [routerLinkActiveOptions]="{exact: true}">Existing Patients
+        <span class="block max-w-0 group-hover:max-w-full transition-all duration-500 h-0.5 bg-secondary" routerLinkActive="max-w-full w-1/6" [routerLinkActiveOptions]="{exact: true}"></span>
+    </a>
+    </div> 
+    <div>
+      <a class="hover:text-secondary align-middle group  text-primary transition duration-300 inline-block" routerLink="/patient/new" routerLinkActive="text-secondary"> Create new patient
+        <span class="block max-w-0 group-hover:max-w-full transition-all duration-500 h-0.5 bg-secondary" routerLinkActive="max-w-full w-1/6"></span>
+      </a>
+    </div>
+    <div>
+      <a class="hover:text-secondary align-middle group  text-primary transition duration-300 inline-block" *ngIf="loginDisplay" mat-button [routerLink]="['profile']" routerLinkActive="text-secondary">Profile
+        <span class="block max-w-0 group-hover:max-w-full transition-all duration-500 h-0.5 bg-secondary" routerLinkActive="max-w-full w-1/6"></span>
+      </a>
+    </div>
+    <div>
+      <button class="hover:text-secondary align-middle group  text-primary transition duration-300" mat-raised-button *ngIf="!loginDisplay" (click)="login()">
+        Login
+        <span class="block max-w-0 group-hover:max-w-full transition-all duration-500 h-0.5 bg-secondary"></span>
+      </button>
+      <button class="hover:text-secondary align-middle group  text-primary transition duration-300" mat-raised-button *ngIf="loginDisplay" (click)="logout()">
+        Logout
+        <span class="block max-w-0 group-hover:max-w-full transition-all duration-500 h-0.5 bg-secondary"></span>
+      </button>
+    </div>
+  </div>
 </mat-toolbar>
 <div>
   <!--This is to avoid reload during acquireTokenSilent() because of hidden iframe -->
