--- a/CE-UI/src/app/patient-record/patient-record.component.html
+++ b/CE-UI/src/app/patient-record/patient-record.component.html
@@ -1,6 +1,6 @@
 <div
   name="record-container"
-  class="px-[var(--main-margin)]"
+  class="px-[var(--main-margin)] mb-10"
 >
   <div name="header-div" class="grid grid-flow-col mb-8 pt-[2.5%]">
     <p class="text-primary font-semibold text-2xl">Patients</p>
