--- a/CE-UI/src/app/profile/profile.component.html
+++ b/CE-UI/src/app/profile/profile.component.html
@@ -1,5 +1,5 @@
 
-<form class="px-[var(--main-margin)]" [formGroup]="updatedUser" (ngSubmit)="onSubmit()">
+<form class="px-[var(--main-margin)] mb-10" [formGroup]="updatedUser" (ngSubmit)="onSubmit()">
     <h1 class="pt-[2.5%] text-primary text-2xl font-semibold mb-8">Profile</h1>
     <div class="block place-content-center rounded-xl bg-background border border-tone-2 px-[10%] py-[2.5%]">
         <div class="flex flex-col place-content-center">
