--- a/src/app/score/score.component.html
+++ b/src/app/score/score.component.html
@@ -5,14 +5,14 @@
       <button
         type="button"
         class="pl-6 pr-6 pt-2 pb-2 enabled:bg-white enabled:text-secondary rounded-md border font-bold"
-        routerLink="/patient/new"
+        routerLink="/score/new"
       >
         Calculate new Score
       </button>
       <button
         type="button"
         class="pl-6 pr-6 pt-2 pb-2 ml-2 enabled:bg-secondary enabled:text-white rounded-md border font-bold"
-        routerLink="/patient/new"
+        routerLink="/score/new"
       >
         Print
       </button>
