--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="w-screen h-screen bg-login bg-center bg-cover p-[3%]">
-    <div class="flex flex-col w-[15%] p-4 bg-[#f5f8fc] h-full rounded-xl justify-between">
-        <img src="assets/CardioLogo.png" class="w-auto h-auto">
-        <div class="p-4 flex flex-col gap-2">
+    <div class="flex flex-col w-[50%] md:w-[15%] sm:w-[25%] p-4 bg-[#f5f8fc] h-full rounded-xl">
+        <img src="assets/CardioLogo.png" class="w-auto h-auto self-start">
+        <div class="p-4 grow flex flex-col gap-2" [class]="{'justify-center': !requestingAccess, 'justify-end': requestingAccess}">
             <p class="text-primary font-medium text-2xl" [ngClass]="{'!visible hidden': requestingAccess}">Login</p>
             <button *ngIf="!requestingAccess" class="px-6 py-2 bg-secondary text-white rounded-md border gap-2 font-bold" (click)="login()">Login</button>
             <form name="accessrequest" class="flex flex-col" [ngClass]="{'!visible hidden': !requestingAccess || accessRequested}">
@@ -39,10 +39,34 @@
             </div>
             <button class="px-6 py-2 bg-primary text-white rounded-md border gap-2 font-bold" [ngClass]="{'!visible hidden': requestingAccess}" (click)="this.requestingAccess = true">Request Access</button>
         </div>
-        <div class="p-4">
-            <p>
-                Version v0.8b
-            </p>
+        <div id="footer" class="justify-self-end p-4 flex flex-col bg-background text-sm items-center gap-4 justify-start  text-center">
+            <!-- <div class="flex flex-row gap-1"> -->
+                <div class="flex flex-row gap-2">
+                    <img src="../../assets/Manufacturer.png" alt="manufacturer" class="h-6 m-1">
+                    
+                    <div class="flex flex-col gap-1 justify-self-center">
+                        <div id="organisation">
+                            <p class="font-semibold">EXPLORIS Health AG</p>
+                            <p>Industriestraße 44</p>
+                            <p>8304 Wallisellen</p>
+                            <p>Switzerland</p>
+                        </div>
+                        <div id="contact" class="flex flex-col">
+                            <p class="font-medium">T +41 43 355 80 10</p>
+                            <a href="mailto:info@explorishealth.com" class="text-primary">info@explorishealth.com</a>
+                            <a href="https://www.explorishealth.com" target="_blank" class="text-primary">www.explorishealth.com</a>
+                        </div>
+                    </div>
+                </div>
+                    <!-- </div> -->
+            <div id="nemius">
+                <img src="../../assets/nemius.png" alt="nemius" class="h-full">
+            </div>
+            <div id="icons" class="flex flex-row">
+                <img src="../../assets/ce-mark.png" alt="ce-mark" class="h-6 self-center">
+                <img src="../../assets/ivd.png" alt="ivd" class="h-6 self-center">
+            </div>
+            <app-version class="text-xs"></app-version>
         </div>
     </div>
 </div>
