--- a/src/app/patient-data-form/patient-data-form.component.html
+++ b/src/app/patient-data-form/patient-data-form.component.html
@@ -50,7 +50,8 @@
       id="patient-birthdate"
       [ngModel]="patient.dateOfBirth | date : 'yyyy-MM-dd'"
       (ngModelChange)="setDateOfBirth($event)"
-      class="basis-1/2 rounded-md border py-1.5 pl-2 focus:ring-2 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6 border-tone-2"
+      class=" w-full text-label-2 rounded-md border py-1.5 pl-2 pr-2 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6 border-tone-2 shadow-sm"
+      max="2999-12-31"
     />
   </div>
 </div>
